web_app/static/web_app/style.css
body {
    font-family: 'Oswald', sans-serif;
    padding-top: 6em;
}


.header{
    font-family: 'Pacifico', cursive;


}

.expenses{
    border: 1px solid;
    border-radius: 10px;
    box-shadow: 5px 10px 8px #17a2b8;
    margin-bottom: 25px;
}

.add-expense{
    border: 1px solid;
    border-radius: 10px;
    box-shadow: 5px 10px 8px #17a2b8;
    margin-bottom: 25px;
}

ul li:nth-child(even){
    background-color: #fffff4;
}
/*.money-left{*/
    /*margin-top: 4em;*/
/*}*/

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 60%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
    margin-right: 1em;
    margin-top: 1em;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

#myModal {
  /*display: none; !* Hidden by default *!*/
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
#myChart {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
    margin-right: 1em;
    margin-top: 1em;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.cssanimation, .cssanimation span {
    animation-duration: 1s;
    animation-fill-mode: both;
}

.cssanimation span { display: inline-block }

.leFlyInBottom span { animation-name: leFlyInBottom }
@keyframes leFlyInBottom {
    0% {
        transform: translate(0px, 80px);
        opacity: 0
    }
    50% {
        transform: translate(10px, -50px);
        animation-timing-function: ease-in-out
    }
}

.money-animation{
    animation-name: moneyLoad;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
}

@keyframes moneyLoad{
    0%{
        transform: translateX(-100%) translateY(-100%) rotate(20deg);

    }

    50%{
        transform: translateX(10%) translateY(10%) rotate(-20deg);
    }


    95%{
        transform: translateX(0) rotate(5deg);
    }

    98%{
        transform: rotate(-3deg);
    }

    99%{
        transform: rotate(1deg);
    }

}

.money-left:hover{
    transform: translateY(-3px);
}

.chart-button{
    border-radius: 10px;
    background-color: white;
    color: #17a2b8;
}

